[package]
name = "libtriptych"
version = "0.1.0"
edition = "2018"
authors = [
    "Pradipta Bora <pradiptabora@cse.iitb.ac.in>"
]
description = "Triptych Log Sized Ring Signatures Crate for Rust"
readme = "README.md"
repository = "https://github.com/geekpradd/libtriptych-rust"
license = "MIT"



[dependencies]
curve25519-dalek = "3"
sha2 = "0.9.5"
rand = "0.7.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "signature_bench"
harness = false